rain curtain sits behind board to stop screen tearing

--- a/src/scss/_board.scss
+++ b/src/scss/_board.scss
@@ -1,5 +1,6 @@
 .board-container {
   position: fixed;
+  z-index: 1;
   left: 0;
   right: 0;
   margin: 0em 0;
